<resources>
    <string name="app_name">Distance Calc</string>

    <string name="lowbed">Lowbed</string>
    <string name="one_ton">1 Ton</string>
    <string name="three_ton">3 Ton</string>
    <string name="ten_ton">10 Ton</string>
    <string name="hilux">HILUX</string>
    <string name="truck_type">Truck Type</string>
    <string name="allowance_per_km">Allowance Per Km</string>
    <string name="add">Add</string>
    <string name="from_range_km">From Range(Km)</string>
    <string name="to_range_km">To Range(Km)</string>
    <string name="allowance_amount">Allowance Amount</string>
    <string name="additional_amount">Additional Amount</string>
    <string name="dashboard">DashBoard</string>
    <string name="trucks">Trucks</string>
    <string name="haulage">Haulage</string>

    <string name="map">Map</string>
    <string name="history">History</string>


    <string name="area">Area</string>
    <string name="location">Location</string>
    <string name="faf">FAF</string>
    <string name="gate_charge">Gate Charge</string>
    <string name="form">Form</string>
    <string name="add_range">Add Range</string>
    <string name="add_location">Add Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="area_name">Area Name</string>
    <string name="location_name">Location Name</string>
    <string name="select_area">Select Area</string>
    <string name="haulage_rate">Haulage Rate</string>
    <string name="total">Total</string>
    <string name="faf_percentage">FAF Percentage</string>
    <string name="change">Change</string>
    <string name="select_location">Select Location</string>
    <string name="total_amount">Total Amount</string>
    <string name="customer_discount">Customer Discount</string>
    <string name="driver_commission">Driver Commission</string>
    <string name="customer_final_amount">Customer Final Amount</string>
    <string name="driver_final_commission">Driver Final Commission</string>
    <string name="toll_charge">Toll Charge</string>
    <string name="title_activity_add_truck">AddTruckActivity</string>

    <string name="truck_type_param">Truck : %1$s</string>
    <string name="allowance_per_km_param">AllowancePerKm : %1$s</string>

</resources>