<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputSelectArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/select_area"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toStartOf="@+id/inputLocationName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSelectArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLocationName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/location_name"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toBottomOf="@+id/inputSelectArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inputSelectArea"
        app:layout_constraintTop_toTopOf="@+id/inputSelectArea">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLocationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapSentences"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputHaulageRage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/haulage_rate"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toStartOf="@+id/inputTollCharge"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSelectArea">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etHaulageRage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTollCharge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/toll_charge"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inputHaulageRage"
        app:layout_constraintTop_toTopOf="@+id/inputHaulageRage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTollCharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputFaf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/faf"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toStartOf="@+id/inputGateCharge"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputHaulageRage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFaf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputGateCharge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/gate_charge"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="@+id/inputTollCharge"
        app:layout_constraintStart_toEndOf="@+id/inputFaf"
        app:layout_constraintTop_toTopOf="@+id/inputFaf">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etGateCharge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/total"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="@+id/inputGateCharge"
        app:layout_constraintStart_toStartOf="@+id/inputFaf"
        app:layout_constraintTop_toBottomOf="@id/inputFaf">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTotal" />


</androidx.constraintlayout.widget.ConstraintLayout>