<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.haulage_fragment.form.FormFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputSelectArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/select_area"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toStartOf="@+id/inputSelectLocation"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSelectArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputSelectLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/select_location"
        app:boxBackgroundMode="outline"
        app:layout_constraintBottom_toBottomOf="@+id/inputSelectArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inputSelectArea"
        app:layout_constraintTop_toTopOf="@+id/inputSelectArea">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSelectLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTotalAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/total_amount"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toStartOf="@+id/inputCustomerDiscount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSelectArea">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTotalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputCustomerDiscount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/customer_discount"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inputTotalAmount"
        app:layout_constraintTop_toTopOf="@+id/inputTotalAmount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCustomerDiscount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDiverCommission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/driver_commission"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toStartOf="@+id/inputCustomerFinalAmount"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTotalAmount">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDiverCommission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputCustomerFinalAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/customer_final_amount"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="@+id/inputCustomerDiscount"
        app:layout_constraintStart_toEndOf="@+id/inputDiverCommission"
        app:layout_constraintTop_toTopOf="@+id/inputDiverCommission">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCustomerFinalAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDriverFinalCommission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/driver_final_commission"
        app:boxBackgroundMode="outline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDiverCommission">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etDriverFinalCommission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />


    </com.google.android.material.textfield.TextInputLayout>

    <!-- <Button
        android:id="@+id/btnChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputDriverFinalCommission" />-->


</androidx.constraintlayout.widget.ConstraintLayout>